force-app/main/default/objects/ZP_Accounting_Firm__c/ZP_Accounting_Firm__c.object-meta.xml
<CustomObject>
    <label>ZP Accounting Firm</label>
    <nameField>
        <displayFormat>ACCOUNTING-FIRM-{0000000000}</displayFormat>
        <label>ZP Accounting Firm Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZP Accounting Firms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>