force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Accountant_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Lead_Id__c</fullName>
    <description>Accountant Lead Id</description>
    <label>Accountant Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>