force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Automatic_Fast_ACH_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Fast_ACH_Activation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Automatic Fast ACH Activation Date</label>
    <type>Date</type>
</CustomField>