force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Created_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created By Email</label>
    <type>Email</type>
</CustomField>