force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Created_By_Visitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Visitor_Id__c</fullName>
    <externalId>true</externalId>
    <label>Created By Visitor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>