force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Last_Processed__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed__c</fullName>
    <description>Timestamp of when the record was last processed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Processed</label>
    <type>DateTime</type>
</CustomField>