force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Lead_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Lead_Campaign__c</fullName>
    <description>Campaign of Reseller Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>