force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Lead_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_First_Name__c</fullName>
    <description>First name of Reseller Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>