force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Lead_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Name__c</fullName>
    <description>Last name of Reseller Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>