force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Lead_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Phone__c</fullName>
    <description>Phone number of Reseller Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>