force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Source of Reseller Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>