force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Merged_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Merged_Firm_ID__c</fullName>
    <description>Displays the Firm ID this Accounting Firm is merged into</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Merged Firm ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>