force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Partner_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>