force-app/main/default/objects/ZP_Accounting_Firm__c/fields/PD_Company_Sizes_Served__c.field-meta.xml
<CustomField>
    <fullName>PD_Company_Sizes_Served__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PD Company Sizes Served</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>