force-app/main/default/objects/ZP_Accounting_Firm__c/fields/PD_Firm_Size__c.field-meta.xml
<CustomField>
    <fullName>PD_Firm_Size__c</fullName>
    <label>PD Firm Size</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>