force-app/main/default/objects/ZP_Accounting_Firm__c/fields/PD_Is_Account_Tech__c.field-meta.xml
<CustomField>
    <fullName>PD_Is_Account_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PD Is Account Tech</label>
    <type>Checkbox</type>
</CustomField>