force-app/main/default/objects/ZP_Accounting_Firm__c/fields/PD_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>PD_Member_Status__c</fullName>
    <label>PD Member Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>