force-app/main/default/objects/ZP_Accounting_Firm__c/fields/PD_Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>PD_Services_Offered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PD Services Offered</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>