force-app/main/default/objects/ZP_Accounting_Firm__c/fields/PD_Software_Used__c.field-meta.xml
<CustomField>
    <fullName>PD_Software_Used__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PD Software Used</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>