force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <description>Explains how Reseller Lead was referred.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>