force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Referred_by_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Company_ID__c</fullName>
    <description>Referred by Company ID</description>
    <label>Referred by Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>