force-app/main/default/objects/ZP_Accounting_Firm__c/fields/Setup_Customers_Reward_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Setup_Customers_Reward_Eligible__c</fullName>
    <description>Number of customers being setup that are Reward Eligible for this Accounting Firm from Panda</description>
    <label>Setup Customers Reward Eligible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>